Allowed two-way binding of current side.
Removed Images

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body ng-controller="UiController as vm">
 
   <!-- Include the carousel directive -->
-  <carousel sides="vm.sides"></carousel>
+  <carousel sides="vm.sides.all" current="vm.sides.current"></carousel>
 
   <h1>Try spinning the 3d carousel.</h1>
 
